       instead of as example. Rename it for easier use of dh_install.
     - Add bash package name completion for which-pkg-broke (Closes:
       #641877), dhomepage, and debget. (Based on devscript's package name
       completion which is under GPLv2+, too)
  * Fix the following lintian warnings:
    - copyright-refers-to-symlink-license
  * Thanks Jakub Wilk for many bugfix patches!

 --

debian-goodies (0.59) unstable; urgency=low

  * [checkrestart]: 
    - Properly define variables to prevent Python errors when using the 
      -p switch (Closes: #646513)
    - Pass a default environment for all subprocess calls

 -- Javier Fernandez-Sanguino Pen~a <jfs@debian.org>  Tue, 25 Oct 2011 00:19:02 +0200

debian-goodies (0.58) unstable; urgency=low

  * [dglob] 
    - Remove any empty lines from grep-dctrl's output (Closes: 646189)

 -- Javier Fernandez-Sanguino Pen~a <jfs@debian.org>  Sun, 23 Oct 2011 13:54:27 +0200

debian-goodies (0.57) unstable; urgency=low

  * [checkrestart]: 
     - Exclude /run/ from the deleted files check, this prevents 
       false positives from some programs such as newer releases of
       jackd2 and chromium which use /run/shm/ instead of
       /dev/shm/ (Closes: #595096)

 -- Javier Fernandez-Sanguino Pen~a <jfs@debian.org>  Mon, 10 Oct 2011 23:05:30 +0200

debian-goodies (0.56) unstable; urgency=low

  * [checkrestart]: 
     - Use patch provided by Jörg Sommer and Piotr Kaczuba that makes the
       script use a set for the initscripts information, thus making the
       program work with Python 2.7 (Closes: #643977)
     - Fix behaviour of -p so that it does not consider files that do
       not belong to any package, thanks to Peter Eisentraut for the
       patch. (Closes: #608387)
     - Fix handling of --verbose option (Closes: #623168)
     - Exclude /dev/shm/ from the deleted files check, this prevents 
       a false positive from some programs such as jackd2 (Closes: #595096)